<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bankapp.traffic.record.TrafficRecordView">

    <include layout="@layout/layout_common_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_traffic_record_car"
            android:textColor="@color/color_main_function_item"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_traffic_record_info"
            android:textColor="@color/color_main_function_item"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_traffic_record_money"
            android:textColor="@color/color_main_function_item"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_traffic_record_data"
            android:textColor="@color/color_main_function_item"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trafficRecord"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_noInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50px"
            android:layout_weight="1"
            android:gravity="center"
            android:text="您当前没有违章记录。"
            android:textColor="@color/color_main_function_item"
            android:textSize="20sp"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_confim"
        android:layout_width="match_parent"
        android:layout_height="67px"
        android:layout_marginBottom="50px"
        android:background="@color/color_money_current_item_three"
        android:gravity="center"
        android:text="确定"
        android:textColor="@color/color_white" />
</LinearLayout>
