<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context="com.example.bankapp.main.MainView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/rl_rollView"
            android:layout_width="match_parent"
            android:layout_height="600px"
            android:visibility="visible">

            <com.jude.rollviewpager.RollPagerView
                android:id="@+id/roll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:rollviewpager_play_delay="3000" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_rollView"
            android:layout_marginLeft="30px"
            android:layout_marginTop="20px"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_main_news" />

            <View
                style="@style/style_main_line_vertical"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="“黑色星期五”折射消费升级趋势"
                android:textColor="@color/color_mian_news"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_function"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_news"
            android:layout_marginLeft="60px"
            android:layout_marginRight="60px"
            android:layout_marginTop="50px"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_registerService"
                    style="@style/style_main_function_item"
                    android:drawableTop="@mipmap/ic_main_function_register"
                    android:text="@string/string_main_function_register" />

                <TextView
                    android:id="@+id/tv_illegalrService"
                    style="@style/style_main_function_item"
                    android:drawableTop="@mipmap/ic_main_function_illegalr"
                    android:text="@string/string_main_function_illegalr" />

                <TextView
                    android:id="@+id/tv_costService"
                    style="@style/style_main_function_item"
                    android:drawableTop="@mipmap/ic_main_function_cost"
                    android:text="@string/string_main_function_cost" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_businessService"
                    style="@style/style_main_function_item"
                    android:drawablePadding="10dp"
                    android:drawableTop="@mipmap/ic_main_function_business"
                    android:text="@string/string_main_function_business" />

                <TextView
                    android:id="@+id/tv_identityService"
                    style="@style/style_main_function_item"
                    android:drawableTop="@mipmap/ic_main_function_identity"
                    android:text="@string/string_main_function_identity" />

                <TextView
                    android:id="@+id/tv_moneyService"
                    style="@style/style_main_function_item"
                    android:drawableTop="@mipmap/ic_main_function_money"
                    android:text="@string/string_main_function_money" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_serviceList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_function"
            android:layout_marginTop="20dp"
            android:background="@color/color_white"
            android:orientation="vertical">

            <View
                style="@style/style_main_line"
                android:layout_below="@id/ll_function" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/string_main_service"
                android:textColor="@color/color_main_function_item"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_main_service"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20px" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <View
            style="@style/style_main_line"
            android:layout_below="@id/ll_function" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@mipmap/ic_main_bottom_logo" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>