<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by 岱青海蓝信息系统(北京)有限公司 on 17-5-6 上午10:12
  ~ Copyright (c) 2017. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_corner_white"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_pick_photo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:gravity="center"
                android:text="@string/string_register_pick_photo"
                android:textColor="@color/color_main_function_item"
                android:textSize="16sp" />

            <View style="@style/style_main_line" />

            <Button
                android:id="@+id/btn_take_photo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:gravity="center"
                android:text="@string/string_register_take_photo"
                android:textColor="@color/color_main_function_item"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_corner_white"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:text="@string/string_register_cancel"
                android:textColor="@color/color_main_function_item"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>